Fix: Rubocopによる修正

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,13 @@
+require:
+  - rubocop-capybara
+  - rubocop-factory_bot
+  - rubocop-rails
+  - rubocop-rspec
+
 inherit_from: .rubocop_todo.yml
 # migrationファイルはメソッド行数が11行以上でも許可する
 MethodLength:
   Exclude:
     - 'db/migrate/*' # *でmigrate以下のファイルを全て指定する
     - 'bin/bundle'
+    - 'db/schema.rb'
